simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

	/**
	 * Original signature : <code>int OpenMM_AmoebaMultipoleForce_getNumMultipoles(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getNumMultipoles(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaMultipoleForce_getNumMultipoles(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaMultipoleForce_getNumMultipoles(const OpenMM_AmoebaMultipoleForce*)</code> */
	int OpenMM_AmoebaMultipoleForce_getNumMultipoles(PointerByReference target);
	/**
	 * Original signature : <code>OpenMM_AmoebaMultipoleForce_NonbondedMethod OpenMM_AmoebaMultipoleForce_getNonbondedMethod(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getNonbondedMethod(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaMultipoleForce_getNonbondedMethod(Pointer target);
	/** Original signature : <code>OpenMM_AmoebaMultipoleForce_NonbondedMethod OpenMM_AmoebaMultipoleForce_getNonbondedMethod(const OpenMM_AmoebaMultipoleForce*)</code> */
	int OpenMM_AmoebaMultipoleForce_getNonbondedMethod(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_NonbondedMethod)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setNonbondedMethod(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(Pointer target, int method);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_NonbondedMethod)</code> */
	void OpenMM_AmoebaMultipoleForce_setNonbondedMethod(PointerByReference target, int method);
	/**
	 * Original signature : <code>OpenMM_AmoebaMultipoleForce_PolarizationType OpenMM_AmoebaMultipoleForce_getPolarizationType(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getPolarizationType(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaMultipoleForce_getPolarizationType(Pointer target);
	/** Original signature : <code>OpenMM_AmoebaMultipoleForce_PolarizationType OpenMM_AmoebaMultipoleForce_getPolarizationType(const OpenMM_AmoebaMultipoleForce*)</code> */
	int OpenMM_AmoebaMultipoleForce_getPolarizationType(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPolarizationType(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_PolarizationType)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setPolarizationType(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setPolarizationType(Pointer target, int type);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPolarizationType(OpenMM_AmoebaMultipoleForce*, OpenMM_AmoebaMultipoleForce_PolarizationType)</code> */
	void OpenMM_AmoebaMultipoleForce_setPolarizationType(PointerByReference target, int type);
	/**
	 * Original signature : <code>double OpenMM_AmoebaMultipoleForce_getCutoffDistance(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getCutoffDistance(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaMultipoleForce_getCutoffDistance(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaMultipoleForce_getCutoffDistance(const OpenMM_AmoebaMultipoleForce*)</code> */
	double OpenMM_AmoebaMultipoleForce_getCutoffDistance(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setCutoffDistance(OpenMM_AmoebaMultipoleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setCutoffDistance(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setCutoffDistance(Pointer target, double distance);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setCutoffDistance(OpenMM_AmoebaMultipoleForce*, double)</code> */
	void OpenMM_AmoebaMultipoleForce_setCutoffDistance(PointerByReference target, double distance);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParameters(const OpenMM_AmoebaMultipoleForce*, double*, int*, int*, int*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaMultipoleForce_getPMEParameters(com.sun.jna.ptr.PointerByReference, java.nio.DoubleBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #OpenMM_AmoebaMultipoleForce_getPMEParameters(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getPMEParameters(Pointer target, DoubleByReference alpha, IntByReference nx, IntByReference ny, IntByReference nz);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParameters(const OpenMM_AmoebaMultipoleForce*, double*, int*, int*, int*)</code> */
	void OpenMM_AmoebaMultipoleForce_getPMEParameters(PointerByReference target, DoubleBuffer alpha, IntBuffer nx, IntBuffer ny, IntBuffer nz);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParameters(const OpenMM_AmoebaMultipoleForce*, double*, int*, int*, int*)</code> */
	void OpenMM_AmoebaMultipoleForce_getPMEParameters(PointerByReference target, DoubleByReference alpha, IntByReference nx, IntByReference ny, IntByReference nz);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPMEParameters(OpenMM_AmoebaMultipoleForce*, double, int, int, int)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setPMEParameters(com.sun.jna.ptr.PointerByReference, double, int, int, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setPMEParameters(Pointer target, double alpha, int nx, int ny, int nz);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPMEParameters(OpenMM_AmoebaMultipoleForce*, double, int, int, int)</code> */
	void OpenMM_AmoebaMultipoleForce_setPMEParameters(PointerByReference target, double alpha, int nx, int ny, int nz);
	/**
	 * Original signature : <code>double OpenMM_AmoebaMultipoleForce_getAEwald(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getAEwald(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaMultipoleForce_getAEwald(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaMultipoleForce_getAEwald(const OpenMM_AmoebaMultipoleForce*)</code> */
	double OpenMM_AmoebaMultipoleForce_getAEwald(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setAEwald(OpenMM_AmoebaMultipoleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setAEwald(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setAEwald(Pointer target, double aewald);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setAEwald(OpenMM_AmoebaMultipoleForce*, double)</code> */
	void OpenMM_AmoebaMultipoleForce_setAEwald(PointerByReference target, double aewald);
	/**
	 * Original signature : <code>int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(const OpenMM_AmoebaMultipoleForce*)</code> */
	int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(const OpenMM_AmoebaMultipoleForce*, OpenMM_IntArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(Pointer target, Pointer gridDimension);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(const OpenMM_AmoebaMultipoleForce*, OpenMM_IntArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(PointerByReference target, PointerByReference gridDimension);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(OpenMM_AmoebaMultipoleForce*, const OpenMM_IntArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(Pointer target, Pointer gridDimension);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(OpenMM_AmoebaMultipoleForce*, const OpenMM_IntArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(PointerByReference target, PointerByReference gridDimension);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(const OpenMM_AmoebaMultipoleForce*, const OpenMM_Context*, double*, int*, int*, int*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, java.nio.DoubleBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(Pointer target, Pointer context, DoubleByReference alpha, IntByReference nx, IntByReference ny, IntByReference nz);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(const OpenMM_AmoebaMultipoleForce*, const OpenMM_Context*, double*, int*, int*, int*)</code> */
	void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(PointerByReference target, PointerByReference context, DoubleBuffer alpha, IntBuffer nx, IntBuffer ny, IntBuffer nz);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(const OpenMM_AmoebaMultipoleForce*, const OpenMM_Context*, double*, int*, int*, int*)</code> */
	void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(PointerByReference target, PointerByReference context, DoubleByReference alpha, IntByReference nx, IntByReference ny, IntByReference nz);
